BUG: constrain cftime to >=1.1.1 (#947)
* limit cftime to <=1.1.0 for all but Python3.5

* add what's new

* Revert "limit cftime to <=1.1.0 for all but Python3.5"

This reverts commit 1afd3cbd410d64dc5a0f171f63e7ebeedd131f2d.

* add only_use_python_datetimes, switch off only_use_cftime_datetimes

* limit cftime>=1.1.1

* update what's new

* install cftime from pip instead

* selectively fail tests

* raise Exception for old cftime

* Revert "install cftime from pip instead"

This reverts commit 251b221bdd87fb104fea3f55690d7dc69ff38196.

* limit cftime, skip<python3.6

* fix lint, import sys

* set cftime<=1.1.0

* fix test_forecast

* add new cftime kwargs, xfail for cftime>1.1.0

* pin to 1.1.1 and above

* improve what's new

* remove unnecessary conda pinning

* remove sys

* test not limiting cftime

* Revert "test not limiting cftime"

This reverts commit f210b11512e5ecb2a1b82317fb6f813c5d1476e8.

--- a/docs/sphinx/source/whatsnew/v0.7.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.2.rst
@@ -91,6 +91,9 @@ Documentation
 Requirements
 ~~~~~~~~~~~~
 * nrel-pysam (optional) minimum set to v1.0.0 (:issue:`874`)
+* cftime (optional) minimum set to >=1.1.1. Use of
+  `only_use_python_datetimes` kwarg in `netCDF4.num2date` in forecast.py
+  requires >=1.1.1 which is >=Python3.6. (:pull:`947`)
 
 Contributors
 ~~~~~~~~~~~~
@@ -103,3 +106,4 @@ Contributors
 * Siyan (Veronica) Guo (:ghuser:`veronicaguo`)
 * Eric Fitch (:ghuser:`ericf900`)
 * Joseph Palakapilly (:ghuser:`JPalakapilly`)
+* Auguste Colle(:ghuser:`augustecolle`)
