conftest.fail_on_pvlib_version applied to functions that require args or kwargs (#973)
* add *args to fail_on_pvlib_version

* working

* try this

* fix

* documentation

* review responses

* changes from review

* remove vestigial

* remove old comment

* inflate version number in test

* remove *args, **kwargs from fail_on_pvlib

* edits

* update whatsnew comment

--- a/docs/sphinx/source/whatsnew/v0.8.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.8.0.rst
@@ -14,6 +14,8 @@ Bug fixes
 
 Testing
 ~~~~~~~
+* Decorator :py:func:`pvlib.conftest.fail_on_pvlib_version` can now be
+  applied to functions that require args or kwargs. (:pull:`973`)
 
 Documentation
 ~~~~~~~~~~~~~
