--- a/docs/sphinx/source/whatsnew/v0.8.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.8.0.rst
@@ -11,6 +11,8 @@ API Changes with Deprecations
    - :py:func:`pvlib.pvsystem.pvwatts_ac` is now :py:func:`pvlib.inverters.pvwatts`
    - :py:func:`pvlib.pvsystem.adrinverter` is now :py:func:`pvlib.inverters.adr`
   (:pull:`886`)
+* ModelChain.ac_model now accepts `'sandia'`, `'pvwatts'` and `'adr'` for the
+  inverter models.
 
 Enhancements
 ~~~~~~~~~~~~
@@ -33,6 +35,8 @@ Documentation
 * Clarify units for heat loss factors in
   :py:func:`pvlib.temperature.pvsyst_cell` and
   :py:func:`pvlib.temperature.faiman`. (:pull:`960`)
+* Corrected key names for :py:func:`pvlib.inverter.sandia`. (:issue:`976',
+  :pull:`886`)
 
 Requirements
 ~~~~~~~~~~~~
