Fixed errors in soiling.hsu function and tests (#977)
* bug fixes to hsu soiling function.  Addresses (#970)

* Made changes to the soiling tests Addresses (#970)

* update what's new documentation

* Fixed stickler-ci issues in test_soiling.py

* Fixed errant character in test

--- a/docs/sphinx/source/whatsnew/v0.8.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.8.0.rst
@@ -11,6 +11,7 @@ Enhancements
 
 Bug fixes
 ~~~~~~~~~
+* Fixed unit and default value errors in :py:func:`pvlib.soiling.hsu`. (:pull:`XXX`)
 
 Testing
 ~~~~~~~
@@ -34,3 +35,4 @@ Contributors
 * Cliff Hansen (:ghuser:`cwhanse`)
 * Kevin Anderson (:ghuser:`kanderso-nrel`)
 * Mark Mikofski (:ghuser:`mikofski`)
+* Joshua S. Stein (:ghuser:`jsstein`)
