--- a/docs/sphinx/source/whatsnew/v0.8.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.8.0.rst
@@ -8,6 +8,8 @@ API Changes
 
 Enhancements
 ~~~~~~~~~~~~
+* Add :py:func:`pvlib.iam.marion_integrate` to calculate IAM values for
+  diffuse irradiance. (:pull:`984`)
 
 Bug fixes
 ~~~~~~~~~
@@ -26,6 +28,8 @@ Documentation
 * Clarify units for heat loss factors in
   :py:func:`pvlib.temperature.pvsyst_cell` and
   :py:func:`pvlib.temperature.faiman`. (:pull:`960`)
+* Add a gallery example of calculating diffuse IAM using
+  :py:func:`pvlib.iam.marion_integrate`. (:pull:`984`)
 
 Requirements
 ~~~~~~~~~~~~
