edits from review

--- a/docs/sphinx/source/whatsnew/v0.8.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.8.0.rst
@@ -6,13 +6,12 @@ v0.8.0 (Month day, year)
 API Changes with Deprecations
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 * Moved functions related to inverters from `pvsystem.py` to `inverter.py`.
-  Functions are renamed to follow a more consistent pattern, as follows:
-   - :py:func:`pvlib.pvsystem.snlinverter` is now :py:func:`pvlib.inverters.sandia`
-   - :py:func:`pvlib.pvsystem.pvwatts_ac` is now :py:func:`pvlib.inverters.pvwatts`
-   - :py:func:`pvlib.pvsystem.adrinverter` is now :py:func:`pvlib.inverters.adr`
-  (:pull:`886`)
+  Functions are renamed to follow a more consistent pattern, as follows (:pull:`886`):
+   - :py:func:`pvlib.pvsystem.snlinverter` is now :py:func:`pvlib.inverter.sandia`
+   - :py:func:`pvlib.pvsystem.pvwatts_ac` is now :py:func:`pvlib.inverter.pvwatts`
+   - :py:func:`pvlib.pvsystem.adrinverter` is now :py:func:`pvlib.inverter.adr`
 * ModelChain.ac_model now accepts `'sandia'`, `'pvwatts'` and `'adr'` for the
-  inverter models.
+  inverter models.  (:pull:`886`)
 
 Enhancements
 ~~~~~~~~~~~~
@@ -24,7 +23,7 @@ Testing
 ~~~~~~~
 * Decorator :py:func:`pvlib.conftest.fail_on_pvlib_version` can now be
   applied to functions that require args or kwargs. (:pull:`973`)
-* Test added for :py:method:`ModelChain.ac_model` to confirm ValueError when
+* Test added for :py:meth:`ModelChain.ac_model` to confirm ValueError when
   ac_model is an invalid string. (:pull:`886`)
 
 Documentation
@@ -35,7 +34,7 @@ Documentation
 * Clarify units for heat loss factors in
   :py:func:`pvlib.temperature.pvsyst_cell` and
   :py:func:`pvlib.temperature.faiman`. (:pull:`960`)
-* Corrected key names for :py:func:`pvlib.inverter.sandia`. (:issue:`976',
+* Corrected key names for :py:func:`pvlib.inverter.sandia`. (:issue:`976`,
   :pull:`886`)
 
 Requirements
