--- a/docs/tutorials/forecast.ipynb
+++ b/docs/tutorials/forecast.ipynb
@@ -8159,7 +8159,7 @@
        "  solar_position_method: nrel_numpy\n",
        "  airmass_model: kastenyoung1989\n",
        "  dc_model: sapm\n",
-       "  ac_model: snlinverter\n",
+       "  ac_model: sandia\n",
        "  aoi_model: sapm_aoi_loss\n",
        "  spectral_model: sapm_spectral_loss\n",
        "  temp_model: sapm_temp\n",
