--- a/docs/tutorials/tmy_to_power.ipynb
+++ b/docs/tutorials/tmy_to_power.ipynb
@@ -1184,8 +1184,8 @@
    ],
    "source": [
     "p_acs = pd.DataFrame()\n",
-    "p_acs['sapm'] = pvlib.pvsystem.snlinverter(sapm_out.v_mp, sapm_out.p_mp, sapm_inverter)\n",
-    "p_acs['sd'] = pvlib.pvsystem.snlinverter(single_diode_out.v_mp, single_diode_out.p_mp, sapm_inverter)\n",
+    "p_acs['sapm'] = pvlib.inverter.sandia(sapm_out.v_mp, sapm_out.p_mp, sapm_inverter)\n",
+    "p_acs['sd'] = pvlib.inverter.sandia(single_diode_out.v_mp, single_diode_out.p_mp, sapm_inverter)\n",
     "\n",
     "p_acs.plot()\n",
     "plt.ylabel('AC Power (W)')"
