more improvements from review

--- a/docs/tutorials/forecast_to_power.ipynb
+++ b/docs/tutorials/forecast_to_power.ipynb
@@ -67,7 +67,7 @@
     "import matplotlib as mpl\n",
     "\n",
     "# finally, we import the pvlib library\n",
-    "from pvlib import solarposition,irradiance,atmosphere,pvsystem\n",
+    "from pvlib import solarposition, irradiance, atmosphere, pvsystem, inverter\n",
     "from pvlib.forecast import GFS, NAM, NDFD, RAP, HRRR"
    ]
   },
@@ -876,7 +876,7 @@
     }
    ],
    "source": [
-    "p_ac = pvsystem.snlinverter(sapm_out.v_mp, sapm_out.p_mp, sapm_inverter)\n",
+    "p_ac = inverter.sandia(sapm_out.v_mp, sapm_out.p_mp, sapm_inverter)\n",
     "\n",
     "p_ac.plot()\n",
     "plt.ylabel('AC Power (W)')\n",
