--- a/docs/tutorials/pvsystem.ipynb
+++ b/docs/tutorials/pvsystem.ipynb
@@ -16,7 +16,7 @@
     "1. [systemdef](#systemdef)\n",
     "2. [Angle of Incidence Modifiers](#Angle-of-Incidence-Modifiers)\n",
     "2. [Sandia Cell Temp correction](#Sandia-Cell-Temp-correction)\n",
-    "2. [Sandia Inverter Model](#snlinverter)\n",
+    "2. [Sandia Inverter Model](#Sandia-inverter-model)\n",
     "2. [Sandia Array Performance Model](#SAPM)\n",
     "    1. [SAPM IV curves](#SAPM-IV-curves)\n",
     "2. [DeSoto Model](#desoto)\n",
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "import pvlib\n",
-    "from pvlib import pvsystem"
+    "from pvlib import pvsystem, inverter"
    ]
   },
   {
@@ -573,7 +573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### snlinverter"
+    "### Sandia-inverter-model"
    ]
   },
   {
@@ -1356,7 +1356,7 @@
     "idcs = pd.Series(np.linspace(0,11,110))\n",
     "pdcs = idcs * vdcs\n",
     "\n",
-    "pacs = pvsystem.snlinverter(vdcs, pdcs, inverters['ABB__MICRO_0_25_I_OUTD_US_208_208V__CEC_2014_'])\n",
+    "pacs = inverter.sandia(vdcs, pdcs, inverters['ABB__MICRO_0_25_I_OUTD_US_208_208V__CEC_2014_'])\n",
     "#pacs.plot()\n",
     "plt.plot(pacs, pdcs)\n",
     "plt.ylabel('ac power')\n",
