improvements from review

--- a/docs/sphinx/source/whatsnew/v0.8.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.8.0.rst
@@ -10,8 +10,8 @@ API Changes with Deprecations
    - :py:func:`pvlib.pvsystem.snlinverter` is now :py:func:`pvlib.inverter.sandia`
    - :py:func:`pvlib.pvsystem.pvwatts_ac` is now :py:func:`pvlib.inverter.pvwatts`
    - :py:func:`pvlib.pvsystem.adrinverter` is now :py:func:`pvlib.inverter.adr`
-* ModelChain.ac_model now accepts `'sandia'`, `'pvwatts'` and `'adr'` for the
-  inverter models.  (:pull:`886`)
+* `modelchain.ModelChain.ac_model` now accepts "sandia", "pvwatts" and
+   "adr" for the inverter models.  (:pull:`886`)
 
 API Changes
 ~~~~~~~~~~~
@@ -21,7 +21,7 @@ API Changes
 Enhancements
 ~~~~~~~~~~~~
 * Update :func:`~pvlib.bifacial.pvfactors_timeseries` to run with ``pvfactors`` v1.4.1 (:issue:`902`)(:pull:`934`)
-* Add :py:func:`pvlib.iam.marion_diffuse` and 
+* Add :py:func:`pvlib.iam.marion_diffuse` and
   :py:func:`pvlib.iam.marion_integrate` to calculate IAM values for
   diffuse irradiance. (:pull:`984`)
 
