py:attribute in whatsnew

--- a/docs/sphinx/source/whatsnew/v0.8.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.8.0.rst
@@ -10,7 +10,7 @@ API Changes with Deprecations
    - :py:func:`pvlib.pvsystem.snlinverter` is now :py:func:`pvlib.inverter.sandia`
    - :py:func:`pvlib.pvsystem.pvwatts_ac` is now :py:func:`pvlib.inverter.pvwatts`
    - :py:func:`pvlib.pvsystem.adrinverter` is now :py:func:`pvlib.inverter.adr`
-* Method :py:meth:`modelchain.ModelChain.ac_model` now accepts ``sandia``,
+* Attribute :py:attribute:`modelchain.ModelChain.ac_model` now accepts ``sandia``,
   ``pvwatts`` and ``adr`` for the inverter models.  (:pull:`886`)
 
 API Changes
